# fastAPI-lab3

./: .env  .gitignore  config.py  db.py  main.py  methods.py  pyproject.toml
models/: Admin.py  Tags.py  User.py  UserDB.py  city.py  country.py  region.py
models/models_answer/: city.py  country.py  region.py
models_old/: Admin.py  UserDB.py
public/: router_city.py  router_country.py  router_region.py  routers.py
